fixed mobile css issues, added meta in basof

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="en" charset="utf-8">
 <head>
 	<link rel="stylesheet" href="/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<a href="/" id="gohome"> djmb</a>
