--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+
+
+
 html, body{
     width: 100%;
     height: 100%;
@@ -248,13 +251,28 @@ flex-direction: column;
 }
 
 @media only screen and (max-width: 480px) {
-   body{
-    height: 100dvh;
-   }
-    .grid{
-        display: grid;
-        grid-template-columns: 1fr 1fr !important;
-      
+    body{
+     height: 100dvh;
     }
+     .grid{
+         display: grid;
+         grid-template-columns: 1fr 1fr !important;
+       
+     }
 
-  }
+     .navright{
+        width: 2.5em;
+        height: 2.5em;
+        margin-top: 1%;
+        padding-bottom: 0;
+     }
+     .content a {
+        font-size: 1.5em;
+     }
+
+
+
+     .allcats{
+        width: 50%;
+     }
+   }
