--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,17 +1,24 @@
 {{ define "main" }}
 {{ partial "navigation.html" .}}
-    
+<div class="regular-content">
 <div id="metadata"> 
 
 </div>
-    <div class="single-containter">
-        <div class="empty"></div>
+
+<div class="grid project-metadata">
+    <div class="grid-item double">
+
+    </div>
+<div class="grid-item grey"> </div>
+
+</div>
+       
        <div class="main-content"> <h1>{{ .Title }}</h1>
         single page
         <img class="single-featured-image" src='{{.Params.FeaturedImage}}'>
         {{ .Content }}
     </div>
     <div class="empty"></div>
-    </div>
-
+    
+</div>
 {{ end}}
