--- a/public/style.css
+++ b/public/style.css
@@ -122,7 +122,13 @@ main{
     top: 0;
     left: 0;
 }
+.toprow{
+display: flex;
+flex-direction: row;
 
+
+
+}
 #gohome{
 width: 95%;
 margin: 0 auto;
@@ -133,6 +139,13 @@ font-size: 1.3em;
 margin-top: 3%;
 margin-bottom: 2%;
 text-align: center;
+}
+#mailicon{
+    margin: 0 auto;
+    margin-top: 2.5%;
+    margin-bottom: 2%;
+    
+    width: 5%;
 }
 #regular-content{
     display: flex;
@@ -262,6 +275,53 @@ max-width: 45vw;
 max-height: 70vh;
 margin: 0 auto;
 }
+.carousel {
+    position: relative;
+    max-width: 70%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+  }
+  .carousel img {
+   height: auto;
+    display: none;
+   max-width: 100%;
+  
+  }
+  .carousel img.active {
+    display: block;
+  }
+  .thumbnails {
+ 
+    justify-content: center;
+    position: relative;
+    display: flex;
+  }
+  .thumbnails img {
+    width: 5dvw;
+    cursor: pointer;
+    margin: 0 5px;
+    opacity: 0.6;
+  }
+  .thumbnails img.active {
+    opacity: 1;
+  }
+  .arrow {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    cursor: pointer;
+  }
+ .left-arrow{
+    margin-top: 3%;
+ }
+ .right-arrow{
+    margin-top: 3%;
+ }
+ .post-meta{
+    
+ }
 .single-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -288,7 +348,8 @@ flex-direction: row;
     width: 49%;
     float: right;
     text-align: center;
-    
+    display: flex;
+    flex-direction: column;
 }
 #description-block{
     width: 50%;
