--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,7 +21,13 @@
           {{ partial "imagecarousel.html" .  }}
  </div>
 
+       
+ <div id="description-block-mobile">
+    <div class="description-mobile">
+        {{ .Content }}
+    </div>
     
+           </div>
     
     </div>
     <div class="empty"></div>
