--- a/layouts/partials/imagecarousel.html
+++ b/layouts/partials/imagecarousel.html
@@ -1,34 +1,34 @@
 <div class="image-container {{ if .Params.images }}hidden{{ end }}">
+    <img class="featuredimage" src="{{ .Params.FeaturedImage }}">
+    <div class="post-meta">
+        <a>{{ .Params.Title }}</a>, {{ .Params.Postyear }}<br>
+        <a>{{ .Params.descblurb }}</a>
+    </div>
+</div>
 
-    <img class="featuredimage " src="{{ .Params.FeaturedImage}}">
- 
-    <div class="post-meta"><a> {{ .Params.Title }}</a>, {{.Params.Postyear }} 
-        <br> <a>{{ .Params.descblurb }} </a>
+{{ $images := .Params.images }}
+
+{{ if and $images (gt (len $images) 0) }}
+
+    <div class="carousel">
+        {{ range $index, $image := $images }}
+            <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}">
+        {{ end }}
+        <div class="post-meta">
+            <a>{{ .Params.Title }}</a>, {{ .Params.Postyear }}<br>
+            <a>{{ .Params.descblurb }}</a>
         </div>
-</div>
+    </div>
 
-<div class="carousel">
-   {{ if .Params.images }} 
-  {{ range $index, $image := .Params.images }}
-    <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}">
-  {{ end }}
-  
- <div class="post-meta"><a> {{ .Params.Title }}</a>, {{.Params.Postyear }} 
-<br> <a>{{ .Params.descblurb }} </a>
-</div>
-  </div>
-  <div class="thumbnails  {{ if not .Params.images }}hidden{{ end }}">
-    <div class="arrow left-arrow" onclick="changeSlide(-1)">&#10094;</div>
-    {{ range $index, $image := .Params.images }}
-    <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}" onclick="showSlide({{ $index }})">
-  {{ end }}
-  <div class="arrow right-arrow" onclick="changeSlide(1)">&#10095;</div>
-  
-</div>
-  {{ end }}
-  
+    <div class="thumbnails">
+        <div class="arrow left-arrow" onclick="changeSlide(-1)">&#10094;</div>
+        {{ range $index, $image := $images }}
+            <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}" onclick="showSlide({{ $index }})">
+        {{ end }}
+        <div class="arrow right-arrow" onclick="changeSlide(1)">&#10095;</div>
+    </div>
 
-
+{{ end }}
 
 <script>
 let currentSlide = 0;
@@ -36,24 +36,24 @@ const slides = document.querySelectorAll('.carousel img');
 const thumbnails = document.querySelectorAll('.thumbnails img');
 
 function showSlide(index) {
-slides[currentSlide].classList.remove('active');
-thumbnails[currentSlide].classList.remove('active');
-currentSlide = index;
-slides[currentSlide].classList.add('active');
-thumbnails[currentSlide].classList.add('active');
+    slides[currentSlide].classList.remove('active');
+    thumbnails[currentSlide].classList.remove('active');
+    currentSlide = index;
+    slides[currentSlide].classList.add('active');
+    thumbnails[currentSlide].classList.add('active');
 }
 
 function changeSlide(direction) {
-let newSlide = currentSlide + direction;
-if (newSlide >= slides.length) {
-  newSlide = 0;
-} else if (newSlide < 0) {
-  newSlide = slides.length - 1;
-}
-showSlide(newSlide);
+    let newSlide = currentSlide + direction;
+    if (newSlide >= slides.length) {
+        newSlide = 0;
+    } else if (newSlide < 0) {
+        newSlide = slides.length - 1;
+    }
+    showSlide(newSlide);
 }
 
 thumbnails.forEach((thumbnail, index) => {
-thumbnail.addEventListener('click', () => showSlide(index));
+    thumbnail.addEventListener('click', () => showSlide(index));
 });
 </script>
