--- a/static/style.css
+++ b/static/style.css
@@ -256,6 +256,22 @@ nav#home a{
     max-width: 15vw;
 
 }
+.thumbimage-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.post-count {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    color: black;
+    padding: 2px 6px;
+    border-radius: 50%;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
 .featured-image{
     max-width: 95%;  
     
@@ -268,8 +284,9 @@ nav#home a{
 }
 .Post-title{
 display: none;
-margin-top: 3vh;
+margin-top: -3vh;
 z-index: 999;
+background-color: #3f3e3e;
 }
 .grid-image:hover + .Post-title{
     display: block;
