--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 {{ partial "navigation.html" .}}
+<div class="wrapper"> 
 <div class="regular-content">
 <div id="metadata"> 
 
@@ -32,5 +33,6 @@
     </div>
     <div class="empty"></div>
     
+</div>
 </div>
 {{ end}}
