--- a/layouts/partials/imagecarousel.html
+++ b/layouts/partials/imagecarousel.html
@@ -2,7 +2,7 @@
     <img class="featuredimage" src="{{ .Params.FeaturedImage }}">
     <div class="post-meta">
         <a class="meta-titledate">{{ .Params.Title }}, {{ .Params.Postyear }}</a><br>
-            <a class="meta-descblurb">{{ .Params.descblurb }}</a>
+      
     </div>
 </div>
 
@@ -10,28 +10,29 @@
 
 {{ if and $images (gt (len $images) 0) }}
 
-    <div class="carousel">
-        {{ range $index, $image := $images }}
-            <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}">
-        {{ end }}
-        <div class="post-meta">
-            <a class="meta-titledate">{{ .Params.Title }}, {{ .Params.Postyear }}</a><br>
-            <a class="meta-descblurb">{{ .Params.descblurb }}</a>
-        </div>
-
-
-    <div class="thumbnails-container">
-        <div class="arrow left-arrow" onclick="changeThumbnailSet(-1)">&#10094;</div>
-        <div class="thumbnails">
-            {{ range $index, $image := $images }}
-                <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}" onclick="showSlide({{ $index }})">
-            {{ end }}
-        </div>
-        <div class="arrow right-arrow" onclick="changeThumbnailSet(1)">&#10095;</div>
+<div class="carousel">
+    {{ range $index, $image := $images }}
+        <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}">
+    {{ end }}
+    <div class="post-meta">
+        <a class="meta-titledate">{{ .Params.Title }}, {{ .Params.Postyear }}</a><br>
+    
     </div>
+</div>
+
+<div class="thumbnails-container">
+    <div class="arrow left-arrow" onclick="changeSlide(-1)">&#10094;</div>
+    <div class="thumbnails">
+        {{ range $index, $image := $images }}
+            <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}" onclick="showSlide({{ $index }})">
+        {{ end }}
+    </div>
+    <div class="arrow right-arrow" onclick="changeSlide(1)">&#10095;</div>
+
+</div>
 
 {{ end }}
-</div>
+
 <script>
 let currentSlide = 0;
 let currentThumbnailSet = 0;
@@ -45,14 +46,20 @@ function showSlide(index) {
     currentSlide = index;
     slides[currentSlide].classList.add('active');
     thumbnails[currentSlide].classList.add('active');
+    
+    // Automatically switch thumbnail set if necessary
+    if (currentSlide >= (currentThumbnailSet + 1) * thumbnailsPerPage || currentSlide < currentThumbnailSet * thumbnailsPerPage) {
+        currentThumbnailSet = Math.floor(currentSlide / thumbnailsPerPage);
+        updateThumbnails();
+    }
 }
 
 function changeSlide(direction) {
     let newSlide = currentSlide + direction;
     if (newSlide >= slides.length) {
-        newSlide = 0;
+        newSlide = 0;  // Cycle to the first slide
     } else if (newSlide < 0) {
-        newSlide = slides.length - 1;
+        newSlide = slides.length - 1;  // Cycle to the last slide
     }
     showSlide(newSlide);
 }
@@ -78,10 +85,6 @@ function changeThumbnailSet(direction) {
     currentThumbnailSet = newThumbnailSet;
     updateThumbnails();
 }
-
-thumbnails.forEach((thumbnail, index) => {
-    thumbnail.addEventListener('click', () => showSlide(index));
-});
 
 updateThumbnails();  // Initialize thumbnail visibility on page load
 </script>
