--- a/public/style.css
+++ b/public/style.css
@@ -72,7 +72,7 @@ background-color: #e3e3e3;
     z-index: 30000;
     margin-left: 2%;
     font-weight: 600;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 .navright{
     
@@ -253,7 +253,7 @@ margin-left: 0.5%;
 .grid-item{
     box-sizing: border-box;
     position: relative;
-
+text-align: center;
 }
 
 .grid-item a{
@@ -538,7 +538,7 @@ color: black;
      .navright{
         width: 2.5em;
         height: 2.5em;
-        margin-top: 1%;
+        margin-top: -1%;
         padding-bottom: 0;
      }
      .content a {
