--- a/layouts/_default/category.html
+++ b/layouts/_default/category.html
@@ -20,7 +20,7 @@
       <a class="subcategory {{ if .Section }} {{else}} subcatactive {{end}}" href="{{ .Permalink }}">
         <div class="thumbimage-wrapper">
           <img class="thumbimage" src="{{ .Params.thumbimage }}">
-          <div class="post-count">{{ $postCount }}</div>
+          <!--  <div class="post-count">{{ $postCount }}</div> -->
         </div>
         <br> {{ .Title }}
       </a>
