--- a/static/style.css
+++ b/static/style.css
@@ -500,6 +500,9 @@ position: relative;
         margin-top: 0px;
         max-height: none;
     }
+    .toprow{
+        margin: 2%;
+    }
     .fa.fa-envelope-o{
         font-size: 25px;
     }
@@ -525,10 +528,14 @@ color: black;
    margin-left: -5%;
 }
      .navright{
-        width: 2.5em;
-        height: 2.5em;
-        margin-top: -1%;
         padding-bottom: 0;
+     }
+     #top-right{
+        margin-left: 4%;
+        margin-top: 2vh;
+     }
+     .content{
+        margin-left: 4%;
      }
      .content a {
         font-size: 1.5em;
@@ -560,7 +567,7 @@ color: black;
         margin: 0 auto;
         }
         .icon.grid{
-margin-top: -155px !important;
+        margin-top: -155px !important;
         }
         .thumbimage{
             max-width: 30vw;
@@ -573,6 +580,9 @@ margin-top: -155px !important;
         }
         #image-block{
             width: 100%;
+        }
+        .video-container{
+            width: 90%;
         }
         .post-meta{
            
