--- a/public/style.css
+++ b/public/style.css
@@ -189,7 +189,7 @@ font-size: 1.8em;
   .allcats{
     display: inline;
     font-weight: 300;
-    width: 20%;
+    width: 60%;
     top: 1;
     position: absolute;
     text-decoration: none;
@@ -216,6 +216,7 @@ margin-left: 0.5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr  ;
     gap: 1rem;
+    margin-bottom: 5%;
 }
 
 .grid-item{
@@ -350,13 +351,16 @@ margin: 0 auto;
     align-items: center;
     gap: 10px;
     -webkit-user-select: none; 
-    user-select: none;                        
+    user-select: none; 
+    position: relative;                       
 }
 
 .thumbnails {
     display: flex;
     justify-content: center;
     gap: 10px;
+    flex-wrap: nowrap;
+    min-width: 300px;
 }
 
 .thumbnails img {
@@ -415,6 +419,7 @@ margin: 0 auto;
     cursor: pointer;
     z-index: 10;
     transition: background-color 0.3s ease;
+    
 
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
@@ -425,12 +430,12 @@ margin: 0 auto;
 }
  .left-arrow{
 
-    left: 10px;
+    left: 3%;
     position: relative;
  }
  .right-arrow{
 
-    right: 10px;
+    right: 3%;
     position: relative;
  }
  
@@ -503,6 +508,9 @@ position: relative;
     .toprow{
         margin: 2%;
     }
+    .Titlerow{
+        width: 100%;
+    }
     .fa.fa-envelope-o{
         font-size: 25px;
     }
@@ -547,7 +555,7 @@ color: black;
 }
 
      .allcats{
-        width: 50%;
+        width: 75%;
      }
      .subcategory{
         font-size: 0.7em;
