--- a/layouts/_default/subcat.html
+++ b/layouts/_default/subcat.html
@@ -16,10 +16,9 @@
     </div>
 </div>
 <div class="grid">
-  
-
-    {{ range (where .Site.RegularPages "CurrentSection.Path" .CurrentSection.Path ) }}
-    <div class="grid-item">
+  {{ $paginator := .Paginate (where .Site.RegularPages "CurrentSection.Path" .CurrentSection.Path) 15 }}
+  {{ range $paginator.Pages }}
+ <div class="grid-item">
       <div class="grid-image">
         <a  href="{{ .Permalink }}">
     
@@ -34,8 +33,30 @@
           <div class="title">{{ .Title }}  </div>
         </a>
       </div>
+
+
  {{ end }}
 </div>
+
+<!-- Pagination controls -->
+<div class="pagination">
+  {{ if gt $paginator.TotalPages 1 }}
+    <div class="page-arrows">
+      {{ if $paginator.HasPrev }}
+        <a href="{{ $paginator.Prev.URL }}" class="prev">← Previous</a>
+      {{ end }}
+
+      {{ range $paginator.Pagers }}
+        <a href="{{ .URL }}" class="{{ if eq .PageNumber $paginator.PageNumber }}active{{ end }}">{{ .PageNumber }}</a>
+      {{ end }}
+
+      {{ if $paginator.HasNext }}
+        <a href="{{ $paginator.Next.URL }}" class="next">Next →</a>
+      {{ end }}
+    </div>
+  {{ end }}
+</div>
+
 </div>
 
 
