--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,7 @@ background-color: rgba(255, 255, 255, 0);
 .pagination {
     text-align: center;
     margin-top: 20px;
+    margin: 5% !important;
   }
   
   .page-arrows a {
@@ -31,18 +32,31 @@ background-color: rgba(255, 255, 255, 0);
     text-decoration: none;
     padding: 5px 10px;
     border: 1px solid #ccc;
+    border-radius: 40%;
+    color: black;
   }
   
   .page-arrows a.active {
-    background-color: #007BFF;
+    background-color: #5f5f5f;
     color: white;
   }
   
   .page-arrows a:hover {
-    background-color: #0056b3;
+    background-color: #858585;
     color: white;
   }
-  
+  .next{
+    border: none !important;
+  }
+  .prev{
+    border: none !important;
+  }
+  .next:hover{
+    background-color: none;
+  }
+  .prev:hover{
+    background-color: none;
+  }
 *{
  
 }
@@ -173,7 +187,7 @@ font-size: 1.8em;
     margin-top: 1% !important;
  margin: 5%;
  overflow-y: none;
-    
+
 }
 #regular-content #icons{
     width: 100%;
@@ -239,7 +253,7 @@ margin-left: 0.5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr  ;
     gap: 1rem;
-    margin-bottom: 5%;
+   
 }
 
 .grid-item{
