--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,6 +24,17 @@
           <br>
       </div>
       {{ end }}
+      <div class="grid-item">
+     
+        <a href="https://admin.shopify.com/store/715b5c/themes" class="subcategory">
+            <div class="thumbimage-wrapper">
+                <img class="thumbimage" src="/image/sHOP_ICON.png">
+                <div class="post-count">$</div>
+            </div>
+            <br>Shop
+        </a>
+        <br>
+    </div>
   </div>
 </div>
 
