changes to index, made to flexbox

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
           <br>
       </div>
       {{ end }}
-      <div class="grid-item">
+      <div class="grid-item last">
      
         <a href="https://admin.shopify.com/store/715b5c/themes" target="_blank" rel="noopener noreferrer"vv class="subcategory">
             <div class="thumbimage-wrapper">
