--- a/static/style.css
+++ b/static/style.css
@@ -186,6 +186,7 @@ font-size: 1.8em;
     margin-top: 1% !important;
  margin: 5%;
  overflow-y: none;
+ align-items: center;
 
 }
 #regular-content #icons{
@@ -247,18 +248,20 @@ position: absolute;
 margin-left: 0.5%;
 }
 .grid{
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
-    gap: 1rem;
+    display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+   align-items: center;
+   
    
 }
 
 .grid-item{
-    box-sizing: border-box;
-    position: relative;
-text-align: center;
+  flex-basis: calc(100% / 5);
+	box-sizing: border-box;
+	object-fit: contain;
 
 }
 
@@ -559,10 +562,24 @@ color: black;
         margin-left: 10%;
     }
      .grid{
-         display: grid;
-         grid-template-columns: 1fr 1fr !important;
-        width: 100%;
-        margin: 0;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 100%;
+      height: 100%;
+      align-items: center;
+
+     }
+     .grid-item{
+      flex-basis: calc(100% / 2);
+      box-sizing: border-box;
+		width: 100%;
+	height: 20vh;
+		align-items: center;
+     }
+     .last{
+      flex-basis: 100%; /* Make the last item take the full width */
+    text-align: center; /* Center text if needed */
      }
 
 
@@ -620,8 +637,12 @@ color: black;
         margin: 0 auto;
         }
         .icon.grid{
-          top: 38% !important;
+         position: relative !important;
+         margin-top: 30% !important;
+     
         }
+
+
         .thumbimage{
             max-width: 30vw;
         }
