--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -18,7 +18,7 @@
 <div class="grid">
 
    {{ range (where .Site.RegularPages "Section" .Section ) }}
-  <div class="grid-item">
+  <div class="grid-item workblock">
     
     <div class="grid-image">
       <a  href="{{ .Permalink }}">
