--- a/layouts/_default/subcat.html
+++ b/layouts/_default/subcat.html
@@ -18,7 +18,7 @@
 <div class="grid">
   {{ $paginator := .Paginate (where .Site.RegularPages "CurrentSection.Path" .CurrentSection.Path) 15 }}
   {{ range $paginator.Pages }}
- <div class="grid-item">
+ <div class="grid-item workblock">
       <div class="grid-image">
         <a  href="{{ .Permalink }}">
     
