--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -25,8 +25,9 @@
 </div>
     <div class="grid-item">
         <div class="grid-image aboutimg">
+         
           <a  href="{{ .Permalink }}">
-          </a>
+            <img src="{{ .Params.profileimage }}"></a>
         </div>
 </div>
 
