--- a/layouts/_default/category.html
+++ b/layouts/_default/category.html
@@ -7,7 +7,7 @@
     {{ $allPosts := .Site.RegularPages }}
     
     {{ range where (where .Site.Pages "Type" "subcategory") "Section" .Section }}
-    <div class="grid-item">
+    <div class="grid-item drawnicon">
       {{ $subsection := . }} <!-- Current subsection -->
       
       <!-- Filter posts to match the current subsection -->
